# vault-client-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.config/: nextest.toml
.github/workflows/: ci.yaml  release.yml
crates/vault-client-rs/: Cargo.toml
crates/vault-client-rs-test/: Cargo.toml
crates/vault-client-rs-test/src/: lib.rs
crates/vault-client-rs/src/: circuit_breaker.rs  lib.rs  renewal.rs
crates/vault-client-rs/src/api/: aws.rs  azure.rs  consul.rs  cubbyhole.rs  gcp.rs  identity.rs  kv1.rs  kv2.rs  mod.rs  nomad.rs  pki.rs  rabbitmq.rs  ssh.rs  terraform.rs  totp.rs  (+2 more)
src/: lib.rs
src/api/: database.rs  identity.rs  kv1.rs  kv2.rs  mod.rs  pki.rs  traits.rs  transit.rs
src/api/auth/: approle.rs  cert.rs  kubernetes.rs  mod.rs  oidc.rs  userpass.rs
src/api/sys/: audit.rs  health.rs  lease.rs  mod.rs  mounts.rs  policy.rs  raft.rs  rekey.rs  wrapping.rs
src/blocking/: mod.rs
src/client/: async_client.rs  blocking_client.rs  mod.rs
src/types/: auth.rs  database.rs  error.rs  identity.rs  mod.rs  pki.rs  response.rs  secret.rs  ssh.rs  sys.rs  transit.rs
tests/integration/: auth_test.rs  common.rs  kv1_test.rs  kv2_test.rs  main.rs  pki_test.rs  sys_test.rs  transit_test.rs
tests/mock/: auth_test.rs  blocking_test.rs  client_test.rs  common.rs  database_test.rs  identity_test.rs  kv1_test.rs  kv2_test.rs  lifecycle_test.rs  main.rs  new_auth_test.rs  new_sys_test.rs  pki_test.rs  ssh_test.rs  sys_test.rs  transit_test.rs
tests/unit/: main.rs  new_types_test.rs  types_test.rs
(+88 files in other folders)
