[package]
name = "vault-client-rs"
description = "A Rust client for the HashiCorp Vault HTTP API"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/michaelklishin/vault-client-rs"

[features]
default = []
blocking = []

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "rustls"] }
tokio = { version = "1", features = ["rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1"
url = "2"
rand = "0.9"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
proptest = "1"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
lto = "off"

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"
lto = "off"
