[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/michaelklishin/vault-client-rs"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
lto = "off"

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"
lto = "off"
